--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   hive_flutter: ^1.1.0
   intl: ^0.18.1
   get: ^4.6.5
+  roundcheckbox: ^2.0.5
 
 dev_dependencies:
   flutter_test:
