--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "simple_notes_app",
-    "short_name": "simple_notes_app",
+    "name": "Simple Notes",
+    "short_name": "Simple Notes",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": "#262626",
+    "theme_color": "#262626",
+    "description": "A User-Friendly Note-Taking App to Keep Your Thoughts Organized!",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
